# Calculator

./: .gitignore  CMakeLists.txt
include/: evaluator.h  lexer.h  parser.h
src/: ASTNodeArray.c  evaluator.c  lexer.c  main.c  parser.c
test/: CMakeLists.txt  test_ASTNodeArray.c  test_evaluator.c  test_lexer.c  test_parser.c
